add a shiro project